Fix visual issues
- Replace "locate me" icon with an improved less prominent version,
  which required slight refactoring of the Icon component.
- Change progress bar to the new blue instead of yellow,
  and also change the background and text color to be more readable.
- Change the focus color of buttons to blue.
- Remove min height for circular icons, as it was making them
  slightly vertically off-centered and doesn't seem to have any use.

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -12,6 +12,10 @@
   text-transform: uppercase;
 }
 
+.Button:focus {
+  outline-color: primaryColor;
+}
+
 .Button-compact {
   min-width: 0;
 }
@@ -60,5 +64,3 @@
 .Button-half {
   width:50%
 }
-
-
