--- a/src/components/icon/Icon.css
+++ b/src/components/icon/Icon.css
@@ -1,13 +1,16 @@
 @value primaryColor from "../../colors.css";
 
-.Icon.circle {
+.Icon-container.circle {
   color: #ffffff;
   box-shadow: 0px 4px 12px rgba(0,0,0,0.55);
   background-color: primaryColor;
   border-radius: 50%;
-  min-width: 60px;
-  min-height: 60px;
+  min-width: 50px;
+  min-height: 50px;
   line-height: inherit;
   text-align: center;
   padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
