--- a/src/components/progressBar/ProgressBar.css
+++ b/src/components/progressBar/ProgressBar.css
@@ -1,5 +1,7 @@
+@value primaryColor from "../../colors.css";
+
 .ProgressBar {
-  background-color: #c4c4c4;
+  background-color: #565856;
   font-size: 14px;
   text-align: left;
   font-weight: lighter;
@@ -7,8 +9,13 @@
   position: relative;
 }
 
+.ProgressBarText {
+  color: white;
+  z-index: 1;
+}
+
 .ProgressBar > .ProgressBarValue {
-  background-color: #F8E71C;
+  background-color: primaryColor;
   top: 0;
   bottom: 0;
   left: 0;
